# log-udp-data

./: CMakeLists.txt  bin_logger.cpp  main.cpp  read_binary_imu_data.m  run_logger.bat  run_logger.sh  run_udp_test_sender.bat  run_udp_test_sender.sh  text_logger.cpp  udp_test_sender_boost.cpp
.github/workflows/: build.yml
include/: args.hpp
include/imu_logger/: crc32.hpp  packet.hpp  writer.hpp
scripts/: bootstrap-vcpkg.ps1  check-toolchain.ps1
src/: bin_writer.cpp  main.cpp  text_writer.cpp
